--- a/src/templates/modal/modal.html
+++ b/src/templates/modal/modal.html
@@ -219,6 +219,8 @@
                             <input checked class="custom-control-input" id="agree-1" required type="checkbox">
                             <label class="custom-control-label" for="agree-1">
                                 Обязуюсь предоставлять достоверную финансовую и юридическую информацию.
+                                <br>
+                                <a href="/" class="form-link" target="_blank">Предоставляемые документы</a>
                             </label>
                             <div class="invalid-feedback">Example invalid feedback text</div>
                         </div>
@@ -228,8 +230,18 @@
                             <input checked class="custom-control-input" id="agree-2" required type="checkbox">
                             <label class="custom-control-label" for="agree-2">
                                 Подтверждаю согласие на обработку персональных данных
+                                <br>
+                                <a href="/" class="form-link" target="_blank">Оферта</a>
                             </label>
                             <div class="invalid-feedback">Example invalid feedback text</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="mb-3">
+                            <a href="/" class="form-link" target="_blank">Политика конфиденциальности</a>
+                        </div>
+                        <div class="mb-3">
+                            <a href="/" class="form-link" target="_blank">Правила пользования сайтом</a>
                         </div>
                     </div>
                     <button class="btn w-100 placingForm-3__btn" type="submit">Отправить форму</button>
