--- a/src/templates/modal/modal.scss
+++ b/src/templates/modal/modal.scss
@@ -84,6 +84,11 @@
 @include media-breakpoint-down(sm) {
 	.modal-header {
 		padding: 1rem;
+		.close {
+			top: 0;
+			right: 0;
+			padding: 0.8rem;
+		}
 	}
 	.modal-body {
 		padding: 2rem 1rem;
