--- a/src/templates/main/chart-table/chart-table.html
+++ b/src/templates/main/chart-table/chart-table.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
         </div>
-        <ul class="chart-table__block_list" id="chart-table__block_list-1">
+        <ul class="toggle-content chart-table__block_list" id="chart-table__block_list-1">
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-4">ADF</div>
                 <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
@@ -182,8 +182,8 @@
                 </div>
             </li>
         </ul>
-        <a href="#chart-table__block_list-1" class="chart-table__block_list_all">
-            <span class="chart-table__block_list_all_arrow"></span>
+        <a href="#chart-table__block_list-1" class="btn-all">
+            <span class="btn-all__arrow"></span>
         </a>
     </div>
     <!-- /.chart-table__block -->
@@ -224,7 +224,7 @@
                 </li>
             </ul>
         </div>
-        <ul class="chart-table__block_list" id="chart-table__block_list-2">
+        <ul class="toggle-content chart-table__block_list" id="chart-table__block_list-2">
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-4">ADF</div>
                 <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
@@ -370,8 +370,8 @@
                 </div>
             </li>
         </ul>
-        <a href="#chart-table__block_list-2" class="chart-table__block_list_all">
-            <span class="chart-table__block_list_all_arrow"></span>
+        <a href="#chart-table__block_list-2" class="btn-all">
+            <span class="btn-all__arrow"></span>
         </a>
     </div>
     <!-- /.chart-table__block -->
@@ -412,7 +412,7 @@
                 </li>
             </ul>
         </div>
-        <ul class="chart-table__block_list" id="chart-table__block_list-3">
+        <ul class="toggle-content chart-table__block_list" id="chart-table__block_list-3">
             <li class="chart-table__block_list_item">
                 <div class="chart-table__block_list_item_age bg-age-4">ADF</div>
                 <div class="chart-table__block_list_item_name">Соляные комнаты «Солти»</div>
@@ -558,8 +558,8 @@
                 </div>
             </li>
         </ul>
-        <a href="#chart-table__block_list-3" class="chart-table__block_list_all">
-            <span class="chart-table__block_list_all_arrow"></span>
+        <a href="#chart-table__block_list-3" class="btn-all">
+            <span class="btn-all__arrow"></span>
         </a>
     </div>
     <!-- /.chart-table__block -->
