--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -6,6 +6,7 @@ Table of contents
 ## Customs
 ## Sidebar
 ## Main
+## Quotation
 ## Modal
 *******************/
 
@@ -29,6 +30,10 @@ Table of contents
 /* ## Main
 ====================*/
 @import "../../templates/main/main";
+
+/* ## Quotation
+====================*/
+@import "../../templates/quotation/quotation";
 
 /* ## Modal
 ====================*/
