--- a/src/templates/quotation/quotation.scss
+++ b/src/templates/quotation/quotation.scss
@@ -3,6 +3,7 @@
 	grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
 	grid-gap: 40px;
 	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 
 .quotation__grid_item {
