--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -7,6 +7,7 @@ Table of contents
 ## Sidebar
 ## Main
 ## Quotation
+## About
 ## Modal
 *******************/
 
@@ -34,6 +35,10 @@ Table of contents
 /* ## Quotation
 ====================*/
 @import "../../templates/quotation/quotation";
+
+/* ## About
+====================*/
+@import "../../templates/about/about";
 
 /* ## Modal
 ====================*/
