--- a/src/templates/quotation/quotation.scss
+++ b/src/templates/quotation/quotation.scss
@@ -63,3 +63,30 @@
 .quotation__grid_item_position_change_icon {
 	margin-left: 5px;
 }
+
+
+
+@include media-breakpoint-down(xl) {
+	.quotation__grid {
+		grid-template-columns: minmax(0, 1fr);
+		grid-gap: 0;
+	}
+}
+
+@include media-breakpoint-down(sm) {
+	.quotation__grid_item {
+		flex-wrap: wrap;
+		height: auto;
+		padding: 0.5rem 1rem;
+	}
+	.quotation__grid_item_left {
+		width: 100%;
+		margin-right: 2rem;
+	}
+	.quotation__grid_item_right {
+		width: 100%;
+	}
+	.quotation__grid_item_position {
+		font-size: 16px;
+	}
+}
