--- a/src/templates/quotation/quotation.scss
+++ b/src/templates/quotation/quotation.scss
@@ -64,6 +64,42 @@
 	margin-left: 5px;
 }
 
+.quotation__chart_collapsed {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	width: 100%;
+	cursor: pointer;
+	&.collapsed {
+		.quotation__chart_collapsed_text {
+			&:before {
+				content: 'Показать график';
+			}
+		}
+		.quotation__chart_collapsed_arrow {
+			transform: none;
+		}
+	}
+}
+
+.quotation__chart_collapsed_text {
+	&:before {
+		content: 'Скрыть график';
+		padding-right: 15px;
+		font-size: 14px;
+		white-space: nowrap;
+	}
+}
+
+.quotation__chart_collapsed_arrow {
+	position: relative;
+	transform: rotate(180deg);
+	width: 24px;
+	height: 24px;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='%231e90ff' fill-rule='nonzero' d='M2.836 7a.5.5 0 0 0-.699.715L11.642 17a.5.5 0 0 0 .698 0l9.523-9.284A.5.5 0 1 0 21.165 7l-9.174 8.944L2.836 7z'/%3E%3C/svg%3E");
+	transition: .3s;
+}
+
 
 
 @include media-breakpoint-down(lg) {
