Добавив дату над чартом для головної сторінки.

--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -1,9 +1,12 @@
 <main class="main">
 
-    <div class="zoom">
-        <div class="zoom__btn">+</div>
-        <div class="range" id="range"></div>
-        <div class="zoom__btn">-</div>
+    <div class="main__head">
+        <div class="main__data">Дата обновлений 20.12.2019</div>
+        <div class="zoom">
+            <div class="zoom__btn">+</div>
+            <div class="range" id="range"></div>
+            <div class="zoom__btn">-</div>
+        </div>
     </div>
 
     //= chart/chart.html
