--- a/src/assets/sass/customs/customs.scss
+++ b/src/assets/sass/customs/customs.scss
@@ -52,6 +52,14 @@
 	border-color: #ffc0c7 transparent transparent transparent;
 }
 
+.play {
+	width: 24px;
+	height: 24px;
+	display: block;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Ccircle cx='12' cy='12' r='11' stroke='%231E90FF' stroke-width='2'/%3E%3Cpath fill='%231E90FF' fill-rule='nonzero' d='M16.1 11.228l-5.657-4.056A.912.912 0 0 0 9 7.913v8.112a.912.912 0 0 0 1.443.74L16.1 12.71a.912.912 0 0 0 0-1.482z'/%3E%3C/g%3E%3C/svg%3E%0A");
+	cursor: pointer;
+}
+
 
 
 @include media-breakpoint-down(lg) {
