--- a/src/templates/quotation/quotation.scss
+++ b/src/templates/quotation/quotation.scss
@@ -18,68 +18,55 @@
 
 .quotation__grid {
 	display: grid;
-	grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-	grid-gap: 40px;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	grid-template-columns: minmax(0, 320px) minmax(0, 1fr);
+	grid-gap: 24px;
+	padding-top: 60px;
 }
 
-.quotation__grid_item {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	height: 72px;
-	padding: 0 1rem;
+.quotation__info {
+	padding: 1rem;
 	background-color: #f6f7f8;
+}
+
+.quotation__info_date {
+	font-size: 12px;
+	color: rgba($black, .7);
+	text-align: right;
+}
+
+.quotation__info_ratio {
+	margin-top: 0.5rem;
+	font-weight: 500;
+	font-size: 42px;
+	text-align: right;
+}
+
+.quotation__info_arrow {
+	font-size: 18px;
+	color: #82d5a0;
+	text-align: right;
+	.ratio-up {
+		border-color: transparent transparent #82d5a0 transparent;
+	}
+}
+
+.quotation__info_position {
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+	margin-top: 1rem;
 	font-size: 14px;
 }
 
-.quotation__grid_item_left {
-	margin-right: 4rem;
-	.link {
-		text-decoration: underline;
-	}
-}
-
-.quotation__grid_item_right {}
-
-.quotation__grid_item_ratio {
-	position: relative;
-	font-weight: 500;
-	font-size: 34px;
-	.ratio-up,
-	.ratio-down {
-		position: absolute;
-		bottom: 14px;
-	}
-}
-
-.quotation__grid_item_date {
-	font-size: 12px;
-	color: rgba($black, .7);
-}
-
-.quotation__grid_item_position {
+.quotation__info_position_change {
 	display: flex;
 	align-items: flex-end;
-	justify-content: flex-start;
-	font-weight: 500;
-	font-size: 18px;
-	span {
-		font-size: 21px;
-	}
+	margin-left: 1rem;
 }
 
-.quotation__grid_item_position_change {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	margin-left: 1.5rem;
-	font-weight: 400;
-}
-
-.quotation__grid_item_position_change_icon {
-	margin-left: 5px;
+.quotation__info_position_change_icon {
+	margin-left: 0.5rem;
+	margin-bottom: 2px;
 }
 
 .quotation__chart_collapsed {
