Quatation: переробив контентну частину і таблицю.

--- a/src/assets/sass/customs/customs.scss
+++ b/src/assets/sass/customs/customs.scss
@@ -42,6 +42,16 @@
 	border-color: transparent transparent #c1f6d4 transparent;
 }
 
+.ratio-text {
+	font-size: 14px;
+	&.up {
+		color: #82d5a0;
+	}
+	&.down {
+		color: #ffc0c7;
+	}
+}
+
 .ratio-down {
 	display: inline-block;
 	width: 0;
