--- a/src/templates/seo/seo.html
+++ b/src/templates/seo/seo.html
@@ -1,4 +1,4 @@
-<h2 class="h2 mt-5 mb-3">Сео текст</h2>
+<h2 class="h2 mt-5 mb-4 pt-5">Сео текст</h2>
 
 <p>
     Вы получаете доступ ко всем знаниям и технологиям управления бизнесом. <br>
@@ -12,6 +12,3 @@
     Расходные материалы, мебель и оборудование по цене в 1,5-2 раза ниже рыночной. <br>
     Единое стандартизированное меню.
 </p>
-
-
-
