--- a/src/templates/quotation/quotation.scss
+++ b/src/templates/quotation/quotation.scss
@@ -42,11 +42,12 @@
 }
 
 .quotation__info_arrow {
-	font-size: 18px;
-	color: #82d5a0;
 	text-align: right;
 	.ratio-up {
 		border-color: transparent transparent #82d5a0 transparent;
+	}
+	.ratio-text {
+		font-size: 18px;
 	}
 }
 
@@ -133,29 +134,46 @@
 	}
 }
 
+.quotation__content {
+	display: grid;
+	grid-template-columns: minmax(0, 1fr) minmax(0, 264px);
+	grid-gap: 40px;
+	padding-top: 6rem;
+	padding-bottom: 3rem;
+	border-bottom: 1px solid $gray;
+}
 
-
-@include media-breakpoint-down(lg) {
-	.quotation__grid {
-		grid-template-columns: minmax(0, 1fr);
-		grid-gap: 0;
+.quotation__table {
+	.tr {
+		grid-template-columns: minmax(0,2fr) minmax(0,2fr) minmax(0,1fr);
 	}
 }
 
+
+
+@include media-breakpoint-down(lg) {}
+
 @include media-breakpoint-down(sm) {
-	.quotation__grid_item {
-		flex-wrap: wrap;
-		height: auto;
-		padding: 0.5rem 1rem;
+	.quotation__content {
+		grid-template-columns: minmax(0, 1fr);
 	}
-	.quotation__grid_item_left {
-		width: 100%;
-		margin-right: 2rem;
-	}
-	.quotation__grid_item_right {
-		width: 100%;
-	}
-	.quotation__grid_item_position {
-		font-size: 16px;
+	.quotation__table {
+		.thead, .tbody {
+			.tr {
+				grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+				.th, .td {
+					padding: 0.4rem;
+					&:nth-child(3) {
+						border-right: none;
+					}
+					&:last-child {
+						display: none;
+					}
+				}
+				.ratio-up, .ratio-down {
+					display: none;
+				}
+			}
+		}
 	}
 }
