--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -9,6 +9,7 @@ Table of contents
 ## Quotation
 ## About
 ## Modal
+## Sidebar News
 *******************/
 
 
@@ -39,6 +40,10 @@ Table of contents
 /* ## About
 ====================*/
 @import "../../templates/about/about";
+
+/* ## Sidebar News
+====================*/
+@import "../../templates/sidebar-news/sidebar-news";
 
 /* ## Modal
 ====================*/
