Quotation: Desktop version ready.

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -8,8 +8,10 @@ Table of contents
 ## Main
 ## Quotation
 ## About
-## Modal
+## About Franchise
+## More Text
 ## Sidebar News
+## Modal
 *******************/
 
 
@@ -40,6 +42,14 @@ Table of contents
 /* ## About
 ====================*/
 @import "../../templates/about/about";
+
+/* ## About Franchise
+====================*/
+@import "../../templates/about-franchise/about-franchise";
+
+/* ## More Text
+====================*/
+@import "../../templates/more-text/more-text";
 
 /* ## Sidebar News
 ====================*/
