Добавив у блочному чарті варіанти з 1 і 2 категоріями.

--- a/src/templates/main/chart/chart-v3.html
+++ b/src/templates/main/chart/chart-v3.html
@@ -1,4 +1,4 @@
-<div class="chart chart-toggle">
+<div class="chart chart-v3 chart-toggle">
     <div class="chart__block chart__block-1">
         <div class="chart__block_label">Услуги <span>(56 котировок)</span></div>
         <div class="chart__block_grid chart__block_grid-1">
@@ -361,217 +361,6 @@
             </div>
             <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true"></div>
             <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true"></div>
-        </div>
-    </div>
-    <!-- /.chart__block -->
-    <div class="chart__block chart__block-2">
-        <div class="chart__block_label">HoReCa <span>(65 котировок)</span></div>
-        <div class="chart__block_grid chart__block_grid-2">
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-2">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-2">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-1">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-2">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true"></div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true"></div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-2">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /.chart__block -->
-    <div class="chart__block chart__block-3">
-        <div class="chart__block_label">Ретейл <span>(36 котировок)</span></div>
-        <div class="chart__block_grid chart__block_grid-3">
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-3">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-4" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-3" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-1" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
-            <div class="chart__block_grid_item bg-age-2" data-toggle="tooltip" data-placement="right" data-html="true">
-                <div class="chart__block_grid_item_content fz-4">
-                    <span class="chart__block_grid_item_name">FB</span>
-                    <span class="chart__block_grid_item_ratio">1057 <span class="ratio-down"></span></span>
-                </div>
-            </div>
         </div>
     </div>
     <!-- /.chart__block -->
