--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -11,6 +11,10 @@
 
     //= chart/chart.html
 
+    //= chart/chart-v2.html
+
+    //= chart/chart-v3.html
+
     //= chart-table/chart-table.html
 
     //= info/info.html
