--- a/src/templates/main/chart/chart.scss
+++ b/src/templates/main/chart/chart.scss
@@ -9,9 +9,7 @@
 }
 
 .chart-v2 {
-	display: none;
 	grid-template-columns: repeat(6, 1fr);
-	grid-gap: 8px;
 	grid-template-areas:
 					'block-1 block-1 block-1 block-2 block-2 block-2'
 					'block-1 block-1 block-1 block-2 block-2 block-2'
@@ -19,7 +17,11 @@
 }
 
 .chart-v3 {
-	display: none;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-areas:
+					'block-1'
+					'block-1'
+;
 }
 
 .chart__block {
